Use LABELs for better PI compat.

--- a/DSotSC/dsotsc.ini
+++ b/DSotSC/dsotsc.ini
@@ -27,6 +27,9 @@ Forum = http://www.shsforums.net/forum/202-dsotsc-bgt/
 # If you use other hosting sites, please check requirements and put direct download link  
 Download = https://github.com/SpellholdStudios/DSotSC
 
+# Type of LABELs used by the mod, read more here https://www.gibberlings3.net/forums/topic/32516-tutorial-what-is-label
+LabelType = GloballyUnique
+
 # Requirements for other hosting sites:
 # - forum attachments won't work because the download links will be changed every time when you update mod package
 # - mod package should be downloaded using 'wget' commandline tool: wget.exe --no-check-certificate 'link'
